Some fine-tuning.

--- a/web/css/style-desktop.css
+++ b/web/css/style-desktop.css
@@ -52,6 +52,11 @@
 		font-size: 1.8em;
 	}
 
+	section.p
+	{
+		width: 80em;
+	}
+
 /*********************************************************************************/
 /* Extra                                                                         */
 /*********************************************************************************/
