Give credits for banner.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,8 @@
       </div>
     </div>
 
+  Banner: <a href="http://commons.wikimedia.org/wiki/File:Lobster_Dinner_(6013079655).jpg"> Benson Kua / CC-BY-SA-2.0</a>
+
   </div>
 
 </footer>
