Update banner handling.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,6 @@
 
 <div class="bottom-border">
   <div class="banner">
-    <img class="banner" src="images/banner.jpg"></img>
+    <img class="banner" width="800px" height="300px" src="images/banner.jpg"></img>
   </div>
 </div>
