Fix author email links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,11 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          {% for author in site.authors %}
+          <li>
+            {{ author.name }} · <a href="mailto:{{ author.email }}">{{ author.email }}</a>
+          </li>
+          {% endfor %}
         </ul>
       </div>
 
