--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,10 @@
 
 <div class="bottom-border">
   <div class="banner">
-    <img class="banner" width="800px" height="300px" src="images/banner.jpg"></img>
+    <img
+      class="banner" width="800px" height="300px"
+      src="images/banner_small.jpg"
+      srcset="images/banner_mid.jpg 2x, images/banner_big.jpg 4x">
+    </img>
   </div>
 </div>
