--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -15,8 +15,8 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50px;
+    min-width: 100%;
+    min-height: 50px;
 
     margin: 0;
     padding: 0;
@@ -31,17 +31,22 @@ nav {
 nav ul {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    flex-wrap: wrap;
+    /* width: 100%; */
 
     margin: 0;
     padding: 0;
 }
 
 nav ul li {
-    flex: 1 1 100%;
+    flex: 1;
     display: block;
     list-style-type: none;
-    text-align: center;
+
+    padding-left: 1em;
+    padding-right: 1em;
+
+    /* text-align: center; */
 }
 
 nav > ul > li > a {
@@ -57,7 +62,6 @@ nav > ul > li a + div {
     background-color: #aaa;
     display: none;
     position: absolute;
-    width: 25%;
     padding-top: 1em;
 }
 
@@ -68,17 +72,17 @@ nav > ul > li:hover a + div {
 nav > ul > li a + div > ul {
     display: flex;
     flex-direction: column;
-    margin: 0;
+    /* margin: 0; */
     padding: 0;
-    width: 100%;
+    /* width: 100%; */
 }
 
 nav > ul > li a + div > ul > li {
-    flex: 1 1 100%;
+    /* flex: 1 1 100%; */
     display: block;
-    margin: 0;
+    /* margin: 0; */
     padding: .5em;
-    text-align: center;
+    /* text-align: center; */
 }
 
 nav > ul > li a + div > ul > li > a {
@@ -101,7 +105,7 @@ nav > ul > li a + div > ul > li > a:hover {
 
     .maincontent {
         float: left;
-        padding: 10px
+        padding: 10px;
         width: 800px;
         max-width: 800px;
     }
@@ -114,7 +118,7 @@ nav > ul > li a + div > ul > li > a:hover {
     }
 
     .maincontent {
-        padding: 10px
+        padding: 10px;
         width: 800px;
         max-width: 800px;
         margin: auto;
@@ -131,6 +135,7 @@ nav > ul > li a + div > ul > li > a:hover {
 }
 
 h2, h3 {
+    clear: both;
     border-bottom: solid 1px;
 }
 
