Plot bandwidth for tasks.
While at it, right-align numbers in the overview and reduce bins from 100
to 50 for histograms and profile plots.

--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -160,6 +160,10 @@ table.fancy th, table.fancy tr.footer td {
     color:#eee;
 }
 
+table.fancy .right, table.fancy tr.footer .right {
+    text-align: right;
+}
+
 table.fancy th a {
     color: #eee
 }
