--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:700italic);
+@import url(https://fonts.googleapis.com/css?family=Share+Tech+Mono);
 @import url(https://code.cdn.mozilla.net/fonts/fira.css);
 
 body {
@@ -76,6 +77,12 @@ nav li.inactive:hover {
 }
 
 .lobster {font-family: 'Lobster Two', cursive;}
+
+.code {
+    font-family: 'Share Tech Mono', monospace;
+    color: #ccc;
+
+}
 
 img {
     max-width: 800px;
@@ -242,4 +249,26 @@ ul.img-list li:hover span.text-content {
 
 .pressed {
     box-shadow: 0px 1em 10px 0px rgba(0,0,0,0.28) inset;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 340px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
