--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -267,6 +267,7 @@ ul.img-list li:hover span.text-content {
     border-radius: 6px;
     position: absolute;
     z-index: 1;
+    font-weight: normal;
 }
 
 .tooltip:hover .tooltiptext {
