Do not wrap code

--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -81,7 +81,7 @@ nav li.inactive:hover {
 .code {
     font-family: 'Share Tech Mono', monospace;
     color: #ccc;
-
+    white-space: nowrap;
 }
 
 img {
