--- a/lobster/commands/data/styles.css
+++ b/lobster/commands/data/styles.css
@@ -267,15 +267,18 @@ ul.img-list li:hover span.text-content {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 340px;
-    background-color: black;
+    width: 380px;
+    background-color:#666;
     color: #fff;
     text-align: center;
-    padding: 5px 0;
+    padding: 10px;
     border-radius: 6px;
     position: absolute;
     z-index: 1;
     font-weight: normal;
+    border-style: solid;
+    border-color: black;
+    display: inline-block;
 }
 
 .tooltip:hover .tooltiptext {
